--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
           <ul class="nav__links">
             <li><a href="#" class="nav__link">Home</a></li>
             <li><a href="#" class="nav__link">Contact</a></li>
-            <li><a href="#" class="nav__link nav__link--primary">Books</a></li>
+            <li><a href="#features" class="nav__link nav__link--primary">Books</a></li>
           </ul>
 
           <button class="btn__menu" onclick="openMenu()">
@@ -371,9 +371,9 @@
             </figure>
           </a>
           <div class="footer__list">
-            <a href="" class="footer__link">Home</a>
+            <a href="#" class="footer__link">Home</a>
             <a href="" class="footer__link no-cursor">About</a>
-            <a href="" class="footer__link">Books</a>
+            <a href="#features" class="footer__link">Books</a>
             <a href="" class="footer__link no-cursor">Contact</a>
           </div>
           <div class="footer__copyright">Copyright &copy; 2025 Library</div>
