--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Library</title>
-    <link rel="stylesheet" href="stlye.css" />
+    <link rel="stylesheet" href="style.css" />
     <script
       src="https://kit.fontawesome.com/a4d3cff651.js"
       crossorigin="anonymous"
@@ -15,7 +15,7 @@
     <section id="landing">
       <nav>
         <div class="nav__container">
-          <img class="logo" src="./library-assets/Library.svg" alt="" />
+          <img class="logo" src="assets/Library.svg" alt="" />
           <ul class="nav__links">
             <li><a href="#" class="nav__link">Home</a></li>
             <li><a href="#" class="nav__link">Contact</a></li>
@@ -34,10 +34,14 @@
                 <a href="#" class="menu__link" onclick="closeMenu()">Home</a>
               </li>
               <li class="menu__list">
-                <a href="#features" class="menu__link" onclick="closeMenu()">Books</a>
+                <a href="#features" class="menu__link" onclick="closeMenu()"
+                  >Books</a
+                >
               </li>
               <li class="menu__list">
-                <a href="#" class="menu__link no-cursor" onclick="closeMenu()">Contact</a>
+                <a href="#" class="menu__link no-cursor" onclick="closeMenu()"
+                  >Contact</a
+                >
               </li>
             </ul>
           </div>
@@ -50,14 +54,10 @@
             <h2>
               Find your dream book with <span class="purple">Library</span>
             </h2>
-            <a href="#features"><button class="btn">Browse books</button></a>
+            <a href="/books.html"><button class="btn">Browse books</button></a>
           </div>
           <figure class="header__img--wrapper">
-            <img
-              class="header__img"
-              src="./library-assets/Undraw_Books.svg"
-              alt=""
-            />
+            <img class="header__img" src="./assets/Undraw_Books.svg" alt="" />
           </figure>
         </div>
       </header>
@@ -117,7 +117,7 @@
               <figure class="book__img--wrapper">
                 <img
                   class="book__img"
-                  src="library-assets/crack the coding interview.png"
+                  src="assets/crack the coding interview.png"
                   alt=""
                 />
               </figure>
@@ -135,11 +135,7 @@
             </div>
             <div class="book">
               <figure class="book__img--wrapper">
-                <img
-                  class="book__img"
-                  src="library-assets/atomic habits.jpg"
-                  alt=""
-                />
+                <img class="book__img" src="assets/atomic habits.jpg" alt="" />
               </figure>
               <div class="book__title">Atomic Habits</div>
               <div class="book__ratings">
@@ -155,11 +151,7 @@
             </div>
             <div class="book">
               <figure class="book__img--wrapper">
-                <img
-                  class="book__img"
-                  src="library-assets/david goggins.jpeg"
-                  alt=""
-                />
+                <img class="book__img" src="assets/david goggins.jpeg" alt="" />
               </figure>
               <div class="book__title">Can't Hurt Me</div>
               <div class="book__ratings">
@@ -175,11 +167,7 @@
             </div>
             <div class="book">
               <figure class="book__img--wrapper">
-                <img
-                  class="book__img"
-                  src="library-assets/deep work.jpeg"
-                  alt=""
-                />
+                <img class="book__img" src="assets/deep work.jpeg" alt="" />
               </figure>
               <div class="book__title">Deep Work</div>
               <div class="book__ratings">
@@ -206,11 +194,7 @@
           <div class="books__recent">
             <div class="book">
               <figure class="book__img--wrapper">
-                <img
-                  class="book__img"
-                  src="library-assets/book-1.jpeg"
-                  alt=""
-                />
+                <img class="book__img" src="assets/book-1.jpeg" alt="" />
               </figure>
               <div class="book__title">The 10X Rule</div>
               <div class="book__ratings">
@@ -224,11 +208,7 @@
             </div>
             <div class="book">
               <figure class="book__img--wrapper">
-                <img
-                  class="book__img"
-                  src="library-assets/book-2.jpeg"
-                  alt=""
-                />
+                <img class="book__img" src="assets/book-2.jpeg" alt="" />
               </figure>
               <div class="book__title">Be Obsessed or Be Average</div>
               <div class="book__ratings">
@@ -242,11 +222,7 @@
             </div>
             <div class="book">
               <figure class="book__img--wrapper">
-                <img
-                  class="book__img"
-                  src="library-assets/book-3.jpeg"
-                  alt=""
-                />
+                <img class="book__img" src="assets/book-3.jpeg" alt="" />
               </figure>
               <div class="book__title">Rich Dad Poor Dad</div>
               <div class="book__ratings">
@@ -260,11 +236,7 @@
             </div>
             <div class="book">
               <figure class="book__img--wrapper">
-                <img
-                  class="book__img"
-                  src="library-assets/book-4.jpeg"
-                  alt=""
-                />
+                <img class="book__img" src="assets/book-4.jpeg" alt="" />
               </figure>
               <div class="book__title">Cashflow Quadrant</div>
               <div class="book__ratings">
@@ -278,11 +250,7 @@
             </div>
             <div class="book">
               <figure class="book__img--wrapper">
-                <img
-                  class="book__img"
-                  src="library-assets/book-5.jpeg"
-                  alt=""
-                />
+                <img class="book__img" src="assets/book-5.jpeg" alt="" />
               </figure>
               <div class="book__title">45 Laws of Power</div>
               <div class="book__ratings">
@@ -296,11 +264,7 @@
             </div>
             <div class="book">
               <figure class="book__img--wrapper">
-                <img
-                  class="book__img"
-                  src="library-assets/book-6.jpeg"
-                  alt=""
-                />
+                <img class="book__img" src="assets/book-6.jpeg" alt="" />
               </figure>
               <div class="book__title">The 5 Second Rule</div>
               <div class="book__ratings">
@@ -314,7 +278,7 @@
             </div>
             <div class="book">
               <figure class="book__img--wrapper">
-                <img class="book__img" src="library-assets/book-7.jpg" alt="" />
+                <img class="book__img" src="assets/book-7.jpg" alt="" />
               </figure>
               <div class="book__title">Your Next Five Moves</div>
               <div class="book__ratings">
@@ -328,11 +292,7 @@
             </div>
             <div class="book">
               <figure class="book__img--wrapper">
-                <img
-                  class="book__img"
-                  src="library-assets/book-8.jpeg"
-                  alt=""
-                />
+                <img class="book__img" src="assets/book-8.jpeg" alt="" />
               </figure>
               <div class="book__title">Mastery</div>
               <div class="book__ratings">
@@ -352,7 +312,9 @@
           <div class="row">
             <div class="explore__description">
               <h2>Explore more <span class="purple">Books</span></h2>
-              <button class="btn">Browse books</button>
+              <a href="./books.html"
+                ><button class="btn">Browse books</button></a
+              >
             </div>
           </div>
         </div>
@@ -363,11 +325,7 @@
         <div class="row row__column">
           <a href="#landing">
             <figure class="footer__logo">
-              <img
-                src="library-assets/Library.svg"
-                class="footer__img--logo"
-                alt=""
-              />
+              <img src="assets/Library.svg" class="footer__img--logo" alt="" />
             </figure>
           </a>
           <div class="footer__list">
