--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
           <ul class="nav__links">
             <li><a href="#" class="nav__link">Home</a></li>
             <li><a href="#" class="nav__link">Contact</a></li>
-            <li><a href="/books.html" class="nav__link nav__link--primary">Books</a></li>
+            <li><a href="books.html" class="nav__link nav__link--primary">Books</a></li>
           </ul>
 
           <button class="btn__menu" onclick="openMenu()">
@@ -34,7 +34,7 @@
                 <a href="#" class="menu__link" onclick="closeMenu()">Home</a>
               </li>
               <li class="menu__list">
-                <a href="/books.html" class="menu__link" onclick="closeMenu()"
+                <a href="books.html" class="menu__link" onclick="closeMenu()"
                   >Books</a
                 >
               </li>
@@ -54,7 +54,7 @@
             <h2>
               Find your dream book with <span class="purple">Library</span>
             </h2>
-            <a href="/books.html"><button class="btn">Browse books</button></a>
+            <a href="books.html"><button class="btn">Browse books</button></a>
           </div>
           <figure class="header__img--wrapper">
             <img class="header__img" src="./assets/Undraw_Books.svg" alt="" />
